add: add server url